--- a/base/tick/charts/telegraf/values.yaml
+++ b/base/tick/charts/telegraf/values.yaml
@@ -136,11 +136,11 @@ config:
             healthy: 1
             problem: 2
             critical: 3
-  outputs:
-    - influxdb:
-        urls:
-          - "http://influxdb.monitoring.svc:8086"
-        database: "telegraf"
+  # outputs:
+  #   - influxdb:
+  #       urls:
+  #         - "http://influxdb.monitoring.svc:8086"
+  #       database: "telegraf"
   inputs:
     - statsd:
         service_address: ":8125"
