--- a/base/tick/kustomization.yaml
+++ b/base/tick/kustomization.yaml
@@ -42,22 +42,25 @@ helmCharts:
     #           - http://tick-influxdb.tick:8086
     #         database:
     #           telegraf
-
-
-  - name: telegraf
+  - name: telegraf-ds
     repo: https://helm.influxdata.com/
-    version: 1.8.22
+    version: 1.1.5
     # version: 1.8.20
     releaseName: tick
-    # namespace: tick-stack
-    # valuesInline:
-      # volumes:
-      #   - name: telegraf-output-influxdb2
-      #     configMap:
-      #       name: "telegraf-output-influxdb2"
-      # mountPoints:
-      #   - name: telegraf-output-influxdb2
-      #     mountPath: /etc/telegraf/conf.d/
+    valuesInline:
+      - influxdb_v2:
+          urls:
+            - "http://tick-influxdb2.tick.svc"
+          token: "MG-YDpI7YR67c9wbxVJNjQB8iOy6yImRO8WkWhsvvPepDxCFZoR1wEEC1T5WRmp7mEz_BKjLV_znCoRL4JpgZg=="
+          organization: "demo"
+          bucket: "demo"
+
+  # - name: telegraf
+  #   repo: https://helm.influxdata.com/
+  #   version: 1.8.22
+  #   # version: 1.8.20
+  #   releaseName: tick
+  #   # namespace: tick-stack
 
           # subPath: influxdb2.conf
     #   config:
