--- a/base/tick/kustomization.yaml
+++ b/base/tick/kustomization.yaml
@@ -48,12 +48,13 @@ helmCharts:
     # version: 1.8.20
     releaseName: tick
     valuesInline:
-      - influxdb_v2:
-          urls:
-            - "http://tick-influxdb2.tick.svc"
-          token: "MG-YDpI7YR67c9wbxVJNjQB8iOy6yImRO8WkWhsvvPepDxCFZoR1wEEC1T5WRmp7mEz_BKjLV_znCoRL4JpgZg=="
-          organization: "demo"
-          bucket: "demo"
+      outputs:
+        - influxdb_v2:
+            urls:
+              - "http://tick-influxdb2.tick.svc"
+            token: "MG-YDpI7YR67c9wbxVJNjQB8iOy6yImRO8WkWhsvvPepDxCFZoR1wEEC1T5WRmp7mEz_BKjLV_znCoRL4JpgZg=="
+            organization: "demo"
+            bucket: "demo"
 
   # - name: telegraf
   #   repo: https://helm.influxdata.com/
