--- a/base/tick/kustomization.yaml
+++ b/base/tick/kustomization.yaml
@@ -63,16 +63,19 @@ helmCharts:
   #   version: 1.8.22
   #   # version: 1.8.20
   #   releaseName: tick
-  #   # namespace: tick-stack
+  #   valuesInline:
+  #     config:
+  #       outputs:
+  #         - influxdb_v2:
+  #             urls:
+  #               - http://tick-influxdb2.tick
+  #             token: "MG-YDpI7YR67c9wbxVJNjQB8iOy6yImRO8WkWhsvvPepDxCFZoR1wEEC1T5WRmp7mEz_BKjLV_znCoRL4JpgZg=="
+  #             organization: "demo-kube"
+  #             bucket: "demo-kube"
+  #       inputs:
+  #         - kubernetes:
+  #           url : "http://127.0.0.1:10255" 
 
-          # subPath: influxdb2.conf
-    #   config:
-    #     outputs:
-    #       - influxdb:
-    #           urls:
-    #             - http://tick-influxdb2.tick
-    #           database:
-    #             telegraf
 
   - name: chronograf
     repo: https://helm.influxdata.com/
@@ -80,17 +83,17 @@ helmCharts:
     releaseName: tick
     # namespace: tick-stack
 
-  # - name: kapacitor
-  #   repo: https://helm.influxdata.com/
-  #   version: 1.4.6
-  #   releaseName: tick
-  #   valuesInline:
-  #     # influxURL: http://tick-influxdb.tick:8086
-  #     influxURL: http://tick-influxdb2.tick:8086
-  #     persistence.enabled: "false"
-  #     existingSecret: influxdb-auth
-  #     # influxdb-user: admin 
-  #     # influxdb-password: password
+  - name: kapacitor
+    repo: https://helm.influxdata.com/
+    version: 1.4.6
+    releaseName: tick
+    valuesInline:
+      # influxURL: http://tick-influxdb.tick:8086
+      influxURL: http://tick-influxdb2.tick
+      persistence.enabled: "false"
+      existingSecret: influxdb-auth
+      # influxdb-user: "demo" 
+      # influxdb-password: "MG-YDpI7YR67c9wbxVJNjQB8iOy6yImRO8WkWhsvvPepDxCFZoR1wEEC1T5WRmp7mEz_BKjLV_znCoRL4JpgZg=="
 
 secretGenerator:
 - name: influxdb-auth
@@ -99,10 +102,8 @@ secretGenerator:
   # files:
   # - longsecret.txt
   literals:
-  - admin-password="password"
-  - admin-token="password"
-  - influxdb-user="admin"
-  - influxdb-password="password"
+  - influxdb-user: "demo" 
+  - influxdb-password: "MG-YDpI7YR67c9wbxVJNjQB8iOy6yImRO8WkWhsvvPepDxCFZoR1wEEC1T5WRmp7mEz_BKjLV_znCoRL4JpgZg=="
 
 
 configMapGenerator:
