--- a/base/tick/kustomization.yaml
+++ b/base/tick/kustomization.yaml
@@ -102,6 +102,8 @@ secretGenerator:
   literals:
     - influxdb-user="demo"
     - influxdb-password="MG-YDpI7YR67c9wbxVJNjQB8iOy6yImRO8WkWhsvvPepDxCFZoR1wEEC1T5WRmp7mEz_BKjLV_znCoRL4JpgZg=="
+    - admin-password="password"
+    - admin-user="admin"
 
 
 configMapGenerator:
