--- a/base/apps/frontend/ingress.yaml
+++ b/base/apps/frontend/ingress.yaml
@@ -1,14 +1,17 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
+group: api
 metadata:
   name: ingress-fe
+  labels:
+    type: api
   annotations:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/ingress.class: kong
 spec:
   rules:
-  - host: the-host-value
-    http:
+    - host: ""
+      http:
       paths:
       - path: /
         pathType: Prefix
