--- a/cluster/kustomization.yaml
+++ b/cluster/kustomization.yaml
@@ -1,6 +1,37 @@
 resources:
+  - env.yaml
   - namespaces.yaml
-  # - applicaiton-prometheus.yaml
   - application-kong-helm.yaml
   - application-tick-stack.yaml
   - application-apps-dev.yaml
+  - ingress-all.yaml
+
+  # - applicaiton-prometheus.yaml
+
+
+# configMapGenerator:
+#   - name: env
+#     op: add
+#     literals:
+#       - domain=aam.com
+
+
+replacements:
+  - source:
+      kind: ConfigMap
+      name: env
+      fieldPath: data.domain
+    targets:
+      - select:
+          kind: Ingress
+          labelSelector: 'type=app'
+        fieldPaths:
+          - spec.rules.*.host
+        options:
+          delimiter: '.' 
+          index: 10
+      - select:
+          kind: Ingress
+          labelSelector: 'type=api'
+        fieldPaths:
+          - spec.rules.*.host
