--- a/overlay/dev/kustomization.yaml
+++ b/overlay/dev/kustomization.yaml
@@ -1,14 +1,14 @@
 resources:
   - ../../base/apps
-  # - env.yaml
+  - env.yaml
 
 namespace: dev
 
-configMapGenerator:
-  - name: env
-    behavior: replace
-    literals:
-      - domain=dev.aam.com
+# configMapGenerator:
+#   - name: env
+#     behavior: replace
+#     literals:
+#       - domain=dev.aam.com
 
 # patchesStrategicMerge:
 #   - frontend-deployment-patch.yaml
