--- a/cluster/namespaces.yaml
+++ b/cluster/namespaces.yaml
@@ -92,6 +92,13 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: test
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: stg
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
