--- a/overlay/test/kustomization.yaml
+++ b/overlay/test/kustomization.yaml
@@ -2,7 +2,7 @@ resources:
   - ../../base/apps
   - env.yaml
 
-namespace: dev
+namespace: test
 
 # configMapGenerator:
 #   - name: env
@@ -17,15 +17,15 @@ namespace: dev
   # - frontend-service-patch.yaml
 # add dev label to all resources
 commonLabels:
-  env: dev
+  env: test
 
 # define latest images to be used in this env
 images:
   - name: trnproj1.azurecr.io/backend@sha256
     # newName: amr158/argocd-demo-backend
     newName: dockre/argocd-demo-backend
-    newTag: 0.0.1
-    # newTag: 0.0.0
+    # newTag: 0.0.1
+    newTag: 0.0.0
     # newName: mcr.microsoft.com/dotnet/samples
     # newTag: aspnetapp
   - name: trnproj1.azurecr.io/frontend@sha256
