--- a/base/apps/backend/deployment.yaml
+++ b/base/apps/backend/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       #     type: RuntimeDefault
       containers:
         - name: backend
-          image: "trnproj1.azurecr.io/backend@sha256"
+          image: "aam/backend"
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
