--- a/base/apps/frontend/deployment.yaml
+++ b/base/apps/frontend/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       #     type: RuntimeDefault
       containers:
         - name: frontend
-          image: "trnproj1.azurecr.io/frontend@sha256"
+          image: "aam/frontend"
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
