added stg application

--- a/cluster/kustomization.yaml
+++ b/cluster/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - application-tick-stack.yaml
   - application-apps-dev.yaml
   - application-apps-test.yaml
+  - application-apps-stg.yaml
   # - ingress-all.yaml
 
   # - applicaiton-prometheus.yaml
